<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Texto de bienvenida (20%) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/bienvenidos"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Imagen (40%) -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/inicio"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"/>

    <!-- Cuadro de texto con hint= "usuario" (20%) -->
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/usuario"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <!-- Botón para navegar a CreditActivity (20%) -->
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/siguiente"
        android:onClick="irACreditos"/>
</LinearLayout>
