<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".catalogo.favItemList.FavDetailItemFragment">

>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetailSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/tvDetailSeriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/detail_series_title"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivSeriesImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/series_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailSeriesTitle" />

            <CheckBox
                android:id="@+id/cbSeriesFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:button="@drawable/selector_favourite_series"
                android:theme="@style/favourite_checkbox"
                app:layout_constraintStart_toEndOf="@id/ivSeriesImage"
                app:layout_constraintTop_toTopOf="@id/ivSeriesImage"
                app:useMaterialThemeColors="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/cardview_shadow_start_color"
                android:contentDescription="@string/fav_item_fab_description"
                android:tint="@color/material_on_background_emphasis_high_type"
                app:layout_constraintBottom_toBottomOf="@id/ivSeriesImage"
                app:layout_constraintStart_toEndOf="@id/ivSeriesImage"
                app:srcCompat="@drawable/round_comment_24" />
            <TextView
                android:id="@+id/tvCountryTitle"
                android:layout_width="56dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:text="@string/country_title"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSeriesImage" />

            <TextView
                android:id="@+id/tvSeriesCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCountryTitle"
                tools:text="España" />

            <TextView
                android:id="@+id/tvValueTitle"
                android:layout_width="64dp"
                android:layout_height="41dp"
                android:layout_marginTop="20sp"
                android:text="@string/value_title"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSeriesCountry" />

            <TextView
                android:id="@+id/tvSeriesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvValueTitle"
                tools:text="Alta" />

            <TextView
                android:id="@+id/tvYearTitle"
                android:layout_width="203dp"
                android:layout_height="39dp"
                android:layout_marginTop="4dp"
                android:text="@string/year_title"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSeriesValue" />

            <TextView
                android:id="@+id/tvSeriesYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYearTitle"
                tools:text="2022" />

            <TextView
                android:id="@+id/tvDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/details_title"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSeriesYear" />

            <TextView
                android:id="@+id/tvSeriesDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailsTitle"
                tools:text="Información extra" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
