<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/ivSongImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/song_image_description"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title -->
            <TextView
                android:id="@+id/tvSongTitleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_momentz"
                android:text="@string/title_label"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvSongTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivSongImage"
                app:layout_constraintTop_toTopOf="@id/ivSongImage"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSongArtistLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivSongImage"
                app:layout_constraintTop_toBottomOf="@+id/tvSongTitleLabel"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Blinding Lights" />

            <!-- Artist -->

            <TextView
                android:id="@+id/tvSongArtistLabel"
                android:layout_width="212dp"
                android:layout_height="17dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_momentz"
                android:text="@string/artist_label"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvSongArtist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivSongImage"
                app:layout_constraintTop_toBottomOf="@id/tvSongTitle"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvSongArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSongYearLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivSongImage"
                app:layout_constraintTop_toBottomOf="@+id/tvSongArtistLabel"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="The Weeknd" />

            <!-- Year -->
            <TextView
                android:id="@+id/tvSongYearLabel"
                android:layout_width="221dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_momentz"
                android:text="@string/year_label"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvSongYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivSongImage"
                app:layout_constraintTop_toBottomOf="@id/tvSongArtist"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvSongYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/ivSongImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/ivSongImage"
                app:layout_constraintTop_toBottomOf="@id/tvSongYearLabel"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="2020" />

            <CheckBox
                android:id="@+id/cbFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:button="@drawable/selector_favourite_item"
                android:theme="@style/favourite_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:useMaterialThemeColors="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
